Fix scrollbar padding error
- take into account that there is a scrollbar that can cover the content

--- a/common/css/popup.css
+++ b/common/css/popup.css
@@ -7,6 +7,7 @@ html, body {
     color: #555555;
     width: 200px;
     padding: 5px;
+    padding-right: 25px;
     text-align: center;
 }
 
